feat: add signin page

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,14 +17,10 @@
     "resolveJsonModule": true,
     "isolatedModules": true,
     "noEmit": true,
-    "jsx": "react",
+    "jsx": "react-jsx",
     "rootDir": "src",
     "baseUrl": "src",
-    "paths": {
-      "~/*": [
-        "*"
-      ]
-    }
+    "strict": true
   },
   "include": [
     "src"
