--- a/package.json
+++ b/package.json
@@ -22,12 +22,15 @@
     ]
   },
   "dependencies": {
+    "@hookform/resolvers": "^2.4.0",
     "axios": "^0.21.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-hook-form": "^7.3.4",
     "react-scripts": "4.0.3",
     "styled-components": "^5.2.3",
-    "typescript": "^4.1.2"
+    "typescript": "^4.1.2",
+    "yup": "^0.32.9"
   },
   "devDependencies": {
     "@babel/preset-typescript": "^7.13.0",
